--- a/src/components/DictionaryPage/DictionaryContainer/DictionaryContainer.scss
+++ b/src/components/DictionaryPage/DictionaryContainer/DictionaryContainer.scss
@@ -19,7 +19,8 @@
 
     @extend %card-shadow;
 
-    @include media-tablet {      
+    @include media-tablet {     
+      height: 600px; 
       flex-direction: column-reverse;
     }
   }
@@ -49,7 +50,7 @@
     }
 
     @include media-tablet {
-      height: 600px;
+      height: 500px;
       width: 100%;
     }
   }
